--- a/src/config.env
+++ b/src/config.env
@@ -1,4 +1,4 @@
-DATABASE =mongodb+srv://buga:buga2024@buga.15wkq.mongodb.net/?retryWrites=true&w=majority&appName=buga
+DATABASE =mongodb+srv://buga:buga2024@buga.15wkq.mongodb.net/?retryWrites=true&w=majority&appName=buga/buga
 PORT=3000
 NODE_ENV=
 JWT_SECRET_KEY=ekowoicho
