added some model modified

--- a/src/config.env
+++ b/src/config.env
@@ -1,6 +1,6 @@
 DATABASE =mongodb+srv://buga:buga2024@buga.15wkq.mongodb.net/?retryWrites=true&w=majority&appName=buga/buga
+LOAL_DATABASE=mongodb://localhost:27017
 PORT=3000
-NODE_ENV=
 JWT_SECRET_KEY=ekowoicho
 JWT_EXPIRES_IN=24h
 JWT_COOKIE_EXPIRES_IN=90d
